WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54375
[Chromium] REGRESSION(
r77370
): Wrong right offset for RTL popup
https://bugs.webkit.org/show_bug.cgi?id=54375
Summary
[Chromium] REGRESSION(r77370): Wrong right offset for RTL popup
Naoki Takano
Reported
2011-02-13 23:26:51 PST
[Chromium] Fix wrong popup position for RTL(again)
Attachments
Patch
(7.42 KB, patch)
2011-02-13 23:31 PST
,
Naoki Takano
no flags
Details
Formatted Diff
Diff
Patch
(7.51 KB, patch)
2011-02-14 00:23 PST
,
Naoki Takano
no flags
Details
Formatted Diff
Diff
Patch
(7.50 KB, patch)
2011-02-14 00:27 PST
,
Naoki Takano
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Naoki Takano
Comment 1
2011-02-13 23:31:25 PST
Created
attachment 82288
[details]
Patch
Naoki Takano
Comment 2
2011-02-13 23:33:13 PST
Could you review again? As I wrote ChangeLog, the bug is introduced by previous RTL fix and not good for the fix
http://codereview.chromium.org/6024008/
.
Kent Tamura
Comment 3
2011-02-13 23:48:08 PST
Comment on
attachment 82288
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=82288&action=review
> Source/WebCore/ChangeLog:8 > + No new tests. (OOPS!)
Please remove this line.
> Source/WebCore/ChangeLog:15 > + (WebCore::PopupContainer::layoutAndCalculateWidgetRect): Change the input parameter to take |popupInitialCoordinate| again. And calculate correct right position with returned right offset from layoutAndRightOffset().
We don't use the || notation in WebKit. Please remove it.
> Source/WebCore/ChangeLog:17 > + (WebCore::PopupContainer::layoutAndRightOffset): Change the name from layout() and to return |rightOffset| value.
ditto.
> Source/WebCore/platform/chromium/PopupMenuChromium.cpp:351 > + // Use |popupInitialCoordinate.x()| + |rightOffset| because RTL position
ditto.
> Source/WebCore/platform/chromium/PopupMenuChromium.cpp:415 > +int PopupContainer::layoutAndRightOffset()
The name layoutAndRightOffset() looks curious. Maybe layoutAndGetRightOffset() is better?
Naoki Takano
Comment 4
2011-02-14 00:23:47 PST
Created
attachment 82293
[details]
Patch
Naoki Takano
Comment 5
2011-02-14 00:24:09 PST
Comment on
attachment 82293
[details]
Patch Please review again.
Naoki Takano
Comment 6
2011-02-14 00:24:34 PST
Oops, just a moment. (In reply to
comment #5
)
> (From update of
attachment 82293
[details]
) > Please review again.
Kent Tamura
Comment 7
2011-02-14 00:25:54 PST
Comment on
attachment 82293
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=82293&action=review
> Source/WebCore/platform/chromium/PopupMenuChromium.cpp:351 > + // Use |popupInitialCoordinate.x()| + |rightOffset| because RTL position
Please remove ||||.
Naoki Takano
Comment 8
2011-02-14 00:27:35 PST
Created
attachment 82294
[details]
Patch
Naoki Takano
Comment 9
2011-02-14 00:28:04 PST
Comment on
attachment 82294
[details]
Patch Deleted || notation. Please review.
WebKit Commit Bot
Comment 10
2011-02-14 05:12:11 PST
Comment on
attachment 82294
[details]
Patch Clearing flags on attachment: 82294 Committed
r78467
: <
http://trac.webkit.org/changeset/78467
>
WebKit Commit Bot
Comment 11
2011-02-14 05:12:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug